Production/Edge/templates/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: edge-service
  namespace: edge
spec:
  selector:
    app: edge-app
  ports:
    - protocol: "TCP"
      port: 9090
      targetPort: 8080
      nodePort: 31000
  type: NodePort
