Production/Edge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-ingress
  namespace: edge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: edge.tpcloud.tech
      http:
        paths:
          - path: /(.*)
            pathType: Prefix

            backend:

              service:

                name: edge-service

                port:

                  number: 31000
